# aachen_aoc24

./: .gitignore  README.md
Andreas/: .gitignore  day7_worst_case_gen.py
Andreas/elixir_aoc/: mix.exs
Andreas/elixir_aoc/lib/: elixir_aoc.ex
Andreas/haskell/: haskell.cabal
Andreas/haskell/app/: Main.hs
Andreas/rust/: Cargo.toml
Andreas/rust/src/: day0.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day18.rs  day2.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  grid.rs  main.rs
Andreas/rust_pretty/: Cargo.toml  index.html  package-lock.json
Andreas/rust_pretty/src/: day6.rs  main.rs
Felix/Haskell/: aoc24.cabal
Felix/Haskell/app/: Day1.hs  Day2.hs  Utils.hs
Felix/Rust/day10/: Cargo.toml
Felix/Rust/day10/src/: main.rs
Felix/Rust/day11/: Cargo.toml
Felix/Rust/day11/src/: main.rs
Felix/Rust/day12/: Cargo.toml
Felix/Rust/day12/src/: main.rs
Felix/Rust/day13/: Cargo.toml
Felix/Rust/day13/src/: main.rs
Felix/Rust/day14/src/: main.rs
Felix/Rust/day15/: Cargo.toml
Felix/Rust/day15/src/: main.rs
Felix/Rust/day16/src/: main.rs
Felix/Rust/day18/: Cargo.toml
Felix/Rust/day19/: Cargo.toml
Felix/Rust/day20/: Cargo.toml
Felix/Rust/day22/: Cargo.toml
Felix/Rust/day23/: Cargo.toml
Felix/Rust/day24/: Cargo.toml
Felix/Rust/day3/: Cargo.toml
Felix/Rust/day4/: Cargo.toml
Felix/Rust/day6/: Cargo.toml
Felix/Rust/day8/: Cargo.toml
Felix/Rust/day9/: Cargo.toml
Thies/3/: main.go
Thies/4/: main.go
Thies/5/: main.go
(+13 files in other folders)
